Update June PAMI and CoRL

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95668,3 +95668,82 @@
   month =        {May}
 }
 
+@inproceedings{implicitpdf2021,
+  title =        {Implicit Representation of Probability Distributions
+                  on the Rotation Manifold},
+  author =       {Murphy, Kieran and Esteves, Carlos and Jampani,
+                  Varun and Ramalingam, Srikumar and Makadia, Ameesh},
+  booktitle =    {International Conference on Machine Learning},
+  year =         {2021}
+}
+
+@article{SUN2020108961,
+  title =        {Optimal composition of heterogeneous multi-agent
+                  teams for coverage problems with performance bound
+                  guarantees},
+  journal =      {Automatica},
+  volume =       117,
+  pages =        108961,
+  year =         2020,
+  issn =         {0005-1098},
+  doi =          {https://doi.org/10.1016/j.automatica.2020.108961},
+  url =
+                  {https://www.sciencedirect.com/science/article/pii/S000510982030159X},
+  author =       {Chuangchuang Sun and Shirantha Welikala and Christos
+                  G. Cassandras},
+  keywords =     {Multi-agent systems, Optimization, Cooperative
+                  control},
+  abstract =     {We consider the problem of determining the optimal
+                  composition of a heterogeneous multi-agent team for
+                  coverage problems by including costs associated with
+                  different agents and subject to an upper bound on
+                  the maximal allowable number of agents. We formulate
+                  a resource allocation problem without introducing
+                  additional non-convexities to the original
+                  problem. We develop a distributed Projected Gradient
+                  Ascent (PGA) algorithm to solve the optimal team
+                  composition problem. To deal with non-convexity, we
+                  initialize the algorithm using a greedy method and
+                  exploit the submodularity and curvature properties
+                  of the coverage objective function to derive novel
+                  tighter performance bound guarantees on the
+                  optimization problem solution. Numerical examples
+                  are included to validate the effectiveness of this
+                  approach in diverse mission space configurations and
+                  different heterogeneous multi-agent
+                  collections. Comparative results obtained using a
+                  commercial mixed-integer nonlinear programming
+                  problem solver demonstrate both the accuracy and
+                  computational efficiency of the distributed PGA
+                  algorithm.}
+}
+
+@Article{hassan21:_autom_detec_pain_facial_expres,
+  author =       {T. Hassan and D. Seuss and J. Wollenberg and
+                  K. Weitz and M. Kunz and L. Lautenbacher and
+                  J.-U. Garbas and U. Schmid},
+  title =        {Automatic Detection of Pain from Facial Expressions:
+                  A Survey},
+  journal =      {IEEE Trans. on Pattern Analysis and Machine
+                  Intelligence},
+  year =         2021,
+  volume =       43,
+  number =       6,
+  pages =        {1815--1831},
+  month =        {June}
+}
+
+
+@Article{dvornik21,
+  author =       {N. Dvornik and J. Mairal and C. Schmid},
+  title =        {On the importance of visual context for data
+                  augmentation in scene understanding},
+  journal =      {IEEE Trans. on Pattern Analysis and Machine
+                  Intelligence},
+  year =         2021,
+  volume =       43,
+  number =       6,
+  pages =        {2014--2028},
+  month =        {June}
+}
+
