End of June + checkin

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95687,7 +95687,7 @@
   year =         2020,
   issn =         {0005-1098},
   doi =          {https://doi.org/10.1016/j.automatica.2020.108961},
-  url =
+  Url =
                   {https://www.sciencedirect.com/science/article/pii/S000510982030159X},
   author =       {Chuangchuang Sun and Shirantha Welikala and Christos
                   G. Cassandras},
@@ -95747,3 +95747,95 @@
   month =        {June}
 }
 
+
+@ARTICLE{8741294,
+  author =       {Huang, Li and Zhou, MengChu and Hao, Kuangrong and
+                  Hou, Edwin},
+  journal =      {IEEE/CAA Journal of Automatica Sinica},
+  title =        {A survey of multi-robot regular and adversarial
+                  patrolling},
+  Year =         {2019},
+  volume =       {6},
+  number =       {4},
+  pages =        {894-903},
+  doi =          {10.1109/JAS.2019.1911537}
+}
+
+@InProceedings{10.1007/978-3-030-44051-0_44,
+  author =       "Basilico, Nicola and Carpin, Stefano",
+  editor =       "Morales, Marco and Tapia, Lydia and
+                  S{\'a}nchez-Ante, Gildardo and Hutchinson, Seth",
+  title =        "Balancing Unpredictability and Coverage in
+                  Adversarial Patrolling Settings",
+  booktitle =    "Algorithmic Foundations of Robotics XIII",
+  year =         "2020",
+  publisher =    "Springer International Publishing",
+  address =      "Cham",
+  pages =        "762--777",
+  abstract =     "We present a novel strategy for a patroller
+                  defending a set of heterogeneous assets from the
+                  attacks carried by an attacker that through repeated
+                  observations attempts to learn the strategy followed
+                  by the patroller. Implemented through a Markov chain
+                  whose stationary distribution is a function of the
+                  values of the assets being defended and the topology
+                  of the environment, the strategy is biased towards
+                  providing more protection to valuable assets, yet is
+                  provably hard to learn for an opponent. After having
+                  studied its properties, we show that our proposed
+                  method outperforms strategies commonly used for this
+                  type of problems.",
+  isbn =         "978-3-030-44051-0"
+}
+
+@inproceedings{aswani2017improving,
+  title =        {Improving surveillance using cooperative target
+                  observation},
+  author =       {Aswani, Rashi and Munnangi, Sai Krishna and
+                  Paruchuri, Praveen},
+  booktitle =    {Proceedings of the AAAI Conference on Artificial
+                  Intelligence},
+  volume =       31,
+  number =       1,
+  year =         2017
+}
+
+@INPROCEEDINGS{9419251,
+  author =       {Yu, Peng and Pan, Junjun and Wang, Zhaoxue and Shen,
+                  Yang and Wang, Lili and Li, Jialun and Hao, Aimin
+                  and Wang, Haipeng},
+  booktitle =    {2021 IEEE Conference on Virtual Reality and 3D User
+                  Interfaces Abstracts and Workshops (VRW)},
+  title =        {Cognitive Load/flow and Performance in Virtual
+                  Reality Simulation Training of Laparoscopic Surgery},
+  year =         2021,
+  pages =        {466-467},
+  doi =          {10.1109/VRW52623.2021.00115}
+}
+
+@ARTICLE{kiatos21,
+  author =       {Kiatos, Marios and Malassiotis, Sotiris and
+                  Sarantopoulos, Iason},
+  journal =      {IEEE Transactions on Robotics},
+  title =        {A Geometric Approach for Grasping Unknown Objects
+                  With Multifingered Hands},
+  year =         2021,
+  volume =       37,
+  number =       3,
+  pages =        {735-746},
+  doi =          {10.1109/TRO.2020.3033696}
+}
+
+@ARTICLE{pierpaoli21,
+  author =       {Pierpaoli, Pietro and Li, Anqi and Srinivasan, Mohit
+                  and Cai, Xiaoyi and Coogan, Samuel and Egerstedt,
+                  Magnus},
+  journal =      {IEEE Transactions on Robotics},
+  title =        {A Sequential Composition Framework for Coordinating
+                  Multirobot Behaviors},
+  year =         2021,
+  volume =       37,
+  number =       3,
+  pages =        {864-876},
+  doi =          {10.1109/TRO.2020.3036628}
+}
