Bargain story for JCRAI update

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95839,3 +95839,12 @@
   pages =        {864-876},
   doi =          {10.1109/TRO.2020.3036628}
 }
+
+
+@Article{mas-colell10,
+  author =       {Mas-colell, Andreu},
+  title =        {Bargaining and Cooperation in Strategic Form Games},
+  journal =      {Journal of the European Economic Association},
+  year =         2010
+}
+
