Game papers for JCRAI paper

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95848,3 +95848,13 @@
   year =         2010
 }
 
+@Article{pena16,
+  author =       {Jorge Pena and Bin Wu and Jordi Arranz and Arne
+                  Traulsen},
+  title =        {Evolutionary Games of Multi-Player Cooperation on
+                  Graphs},
+  journal =      {{PLOS} Computational Biology},
+  year =         2016,
+  month =        {August}
+}
+
