post RA-L submission

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95858,3 +95858,75 @@
   month =        {August}
 }
 
+
+@Book{dickmanns07:_dynam_vision_percep_contr_motion,
+  author =       {E. Dickmanns},
+  title =        {Dynamic Vision for Perception and Control of Motion},
+  publisher =    {Springer Verlag},
+  year =         2007,
+  address =      {Heidelberg},
+  month =        {October}
+}
+
+@article{ROB-066,
+  url =          {http://dx.doi.org/10.1561/2300000066},
+  year =         2021,
+  volume =       8,
+  journal =      {Foundations and Trends in Robotics},
+  title =        {A Roadmap for US Robotics – From Internet to
+                  Robotics 2020 Edition},
+  doi =          {10.1561/2300000066},
+  issn =         {1935-8253},
+  number =       4,
+  pages =        {307-424},
+  author =       {Henrik Christensen and Nancy Amato and Holly Yanco
+                  and Maja Mataric and Howie Choset and Ann Drobnis
+                  and Ken Goldberg and Jessy Grizzle and Gregory Hager
+                  and John Hollerbach and Seth Hutchinson and Venkat
+                  Krovi and Daniel Lee and Bill Smart and Jeff Trinkle
+                  and Gaurav Sukhatme}
+}
+
+@article{garg2020semantics,
+  title =        {Semantics for Robotic Mapping, Perception and
+                  Interaction: A Survey},
+  author =       {Garg, Sourav and S{\"u}nderhauf, Niko and Dayoub,
+                  Feras and Morrison, Douglas and Cosgun, Akansel and
+                  Carneiro, Gustavo and Wu, Qi and Chin, Tat-Jun and
+                  Reid, Ian and Gould, Stephen and others},
+  journal =      {Foundations and Trends{\textregistered} in Robotics},
+  volume =       8,
+  number =       {1--2},
+  pages =        {1--224},
+  year =         2020,
+  publisher =    {Now Publishers, Inc.}
+}
+
+@article{cadena2016past,
+  title =        {Past, present, and future of simultaneous
+                  localization and mapping: Toward the
+                  robust-perception age},
+  author =       {Cadena, Cesar and Carlone, Luca and Carrillo, Henry
+                  and Latif, Yasir and Scaramuzza, Davide and Neira,
+                  Jos{\'e} and Reid, Ian and Leonard, John J},
+  journal =      {IEEE Transactions on robotics},
+  volume =       32,
+  number =       6,
+  pages =        {1309--1332},
+  year =         2016,
+  publisher =    {IEEE}
+}
+
+@article{article,
+  author =       {Patterson, Miles and Iizuka, Yuichi and Tubbs, Mark
+                  and Ansel, Jennifer and Tsutsumi, Masao and Anson,
+                  Jackie},
+  year =         {2007},
+  month =        {09},
+  pages =        {155-166},
+  title =        {Passing Encounters East and West: Comparing Japanese
+                  and American Pedestrian Interactions},
+  volume =       {31},
+  journal =      {Journal of Nonverbal Behavior},
+  doi =          {10.1007/s10919-007-0028-4}
+}
