Monthly update Sept 2021
* bib-file.bib:

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95930,3 +95930,15 @@
   journal =      {Journal of Nonverbal Behavior},
   doi =          {10.1007/s10919-007-0028-4}
 }
+
+@inproceedings{armeni20193d,
+  title =	 {{3D} scene graph: {A} structure for unified
+                  semantics, {3D} space, and camera},
+  author =	 {Armeni, Iro and He, Zhi-Yang and Gwak, JunYoung and
+                  Zamir, Amir R and Fischer, Martin and Malik,
+                  Jitendra and Savarese, Silvio},
+  booktitle =	 {Proceedings of the IEEE/CVF International Conference
+                  on Computer Vision},
+  pages =	 {5664--5673},
+  year =	 2019
+}
