--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95942,3 +95942,13 @@
   pages =	 {5664--5673},
   year =	 2019
 }
+
+@Book{bodenhamer20,
+  author =       {Jeremy Bodenhamer},
+  title =        {Adopt or Die - Your Survival Guide to Moden
+                  Warehouse Automation},
+  publisher =    {Houndstooth Press},
+  year =         2020,
+  address =      {Los Angeles, CA}
+}
+
