Weekly journal club check in

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95952,3 +95952,48 @@
   address =      {Los Angeles, CA}
 }
 
+@article{kolve2017ai2,
+  title =        {{AI2-THOR}: An interactive 3d environment for visual
+                  ai},
+  author =       {Kolve, Eric and Mottaghi, Roozbeh and Han, Winson
+                  and VanderBilt, Eli and Weihs, Luca and Herrasti,
+                  Alvaro and Gordon, Daniel and Zhu, Yuke and Gupta,
+                  Abhinav and Farhadi, Ali},
+  journal =      {arXiv preprint arXiv:1712.05474},
+  year =         {2017}
+}
+
+@inproceedings{song2019apollocar3d,
+  title =        {Apollocar3d: A large 3d car instance understanding
+                  benchmark for autonomous driving},
+  author =       {Song, Xibin and Wang, Peng and Zhou, Dingfu and Zhu,
+                  Rui and Guan, Chenye and Dai, Yuchao and Su, Hao and
+                  Li, Hongdong and Yang, Ruigang},
+  booktitle =    {Proceedings of the IEEE/CVF Conference on Computer
+                  Vision and Pattern Recognition},
+  pages =        {5452--5462},
+  year =         {2019}
+}
+
+@article{kreiss2021openpifpaf,
+  title =        {OpenPifPaf: Composite Fields for Semantic Keypoint
+                  Detection and Spatio-Temporal Association},
+  author =       {Kreiss, Sven and Bertoni, Lorenzo and Alahi,
+                  Alexandre},
+  journal =      {arXiv preprint arXiv:2103.02440},
+  year =         2021
+}
+
+
+@Article{orthey20,
+  author =       {Andreas Orthey and Sohaib Akbar and Marc Toussaint},
+  title =        {Multilevel Motion Planning: A Fiber Bundle
+                  Formulation},
+  journal =      {Intl. Jour of Robotics Research},
+  year =         2020,
+  volume =       { },
+  number =       { },
+  pages =        { },
+  month =        { }
+}
+
