Update based on DCIST Q3 report

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -95976,7 +95976,7 @@
 }
 
 @article{kreiss2021openpifpaf,
-  title =        {OpenPifPaf: Composite Fields for Semantic Keypoint
+  title =        {{OpenPifPaf}: Composite Fields for Semantic Keypoint
                   Detection and Spatio-Temporal Association},
   author =       {Kreiss, Sven and Bertoni, Lorenzo and Alahi,
                   Alexandre},
@@ -95997,3 +95997,24 @@
   month =        { }
 }
 
+@misc{weintraub2020introduction,
+  title =        {An Introduction to Pursuit-evasion Differential
+                  Games},
+  author =       {Isaac E. Weintraub and Meir Pachter and Eloy Garcia},
+  year =         {2020},
+  eprint =       {2003.05013},
+  archivePrefix ={arXiv},
+  primaryClass = {math.OC}
+}
+
+@article{zhai2013decentralized,
+  title =        {Decentralized sweep coverage algorithm for
+                  multi-agent systems with workload uncertainties},
+  author =       {Zhai, Chao and Hong, Yiguang},
+  journal =      {Automatica},
+  volume =       {49},
+  number =       {7},
+  pages =        {2154--2159},
+  year =         {2013},
+  publisher =    {Elsevier}
+}
