Post journal club 21/10/29

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96018,3 +96018,11 @@
   year =         {2013},
   publisher =    {Elsevier}
 }
+
+@inproceedings{ya-chien19,
+  title =        {Neural Lyapunov Control},
+  author =       {Ya-Chien Chang, Nima Roohi, and Sicun Gao},
+  booktitle =    {NeurIPS},
+  year =         2019
+}
+
