NERF tutorials in PyImage Search

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -22561,7 +22561,7 @@
 }
 
 @inbook{Fox00a,
-  title =        {{Sequential Monte Carlo Methods in Practice}},
+  Title =        {{Sequential Monte Carlo Methods in Practice}},
   author =       {Dieter Fox and Sebastian Thrun and Wolfram Burgard
                   and Frank Dellaert},
   year =         2000,
@@ -96024,5 +96024,35 @@
   author =       {Ya-Chien Chang, Nima Roohi, and Sicun Gao},
   booktitle =    {NeurIPS},
   year =         2019
+}
+
+@Article{jing21:survey
+  author =       {L. Jing and Y. Tian},
+  title =        {Self-Supervised visual feature learning with Deep
+                  Neural Networks: A Survey},
+  journal =      {IEEE Trans on Pattern Analysis and Machine Learning},
+  year =         2021,
+  volume =       43,
+  number =       11,
+  pages =        {4037--4058},
+  month =        {November}
+}
+
+@article{Gosthipaty_Raha_2021_pt2,
+  author =       {Aritra Roy Gosthipaty and Ritwik Raha},
+  title =        {Computer Graphics and Deep Learning with {NeRF}
+                  using {TensorFlow} and {Keras}: Part 2},
+  journal =      {PyImageSearch},
+  year =         {2021},
+  URL =          {https://www.pyimagesearch.com/2021/11/17/computer-graphics-and-deep-learning-with-nerf-using-tensorflow-and-keras-part-2/},
+}
+
+@article{Gosthipaty_Raha_2021_pt1,
+  author =       {Aritra Roy Gosthipaty and Ritwik Raha},
+  title =        {Computer Graphics and Deep Learning with {NeRF}
+                  using {TensorFlow} and {Keras}: Part 1},
+  journal =      {PyImageSearch},
+  year =         2021,
+  URL =         {https://www.pyimagesearch.com/2021/11/10/computer-graphics-and-deep-learning-with-nerf-using-tensorflow-and-keras-part-1/},
 }
 
