Letter writing updates

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96026,7 +96026,7 @@
   year =         2019
 }
 
-@Article{jing21:survey
+@Article{jing21:survey,
   author =       {L. Jing and Y. Tian},
   title =        {Self-Supervised visual feature learning with Deep
                   Neural Networks: A Survey},
@@ -96056,3 +96056,76 @@
   URL =         {https://www.pyimagesearch.com/2021/11/10/computer-graphics-and-deep-learning-with-nerf-using-tensorflow-and-keras-part-1/},
 }
 
+@misc{tensorflowmodelgarden2020,
+  author =       {Hongkun Yu and Chen Chen and Xianzhi Du and Yeqing
+                  Li and Abdullah Rashwan and Le Hou and Pengchong Jin
+                  and Fan Yang and Frederick Liu and Jaeyoun Kim and
+                  Jing Li},
+  title =        {{TensorFlow Model Garden}},
+  howpublished = {\url{https://github.com/tensorflow/models}},
+  year =         {2020}
+}
+
+@article{howard2008state,
+  title =        {State space sampling of feasible motions for
+                  high-performance mobile robot navigation in complex
+                  environments},
+  author =       {Howard, Thomas M and Green, Colin J and Kelly,
+                  Alonzo and Ferguson, Dave},
+  journal =      {Journal of Field Robotics},
+  volume =       {25},
+  number =       {6-7},
+  pages =        {325--345},
+  year =         {2008},
+  publisher =    {Wiley Online Library}
+}
+
+@inproceedings{howard2012enabling,
+  title =        {Enabling continuous planetary rover navigation
+                  through FPGA stereo and visual odometry},
+  author =       {Howard, Thomas M and Morfopoulos, Arin and Morrison,
+                  Jack and Kuwata, Yoshiaki and Villalpando, Carlos
+                  and Matthies, Larry and McHenry, Michael},
+  booktitle =    {2012 IEEE Aerospace Conference},
+  pages =        {1--9},
+  year =         {2012},
+  organization = {IEEE}
+}
+
+@inproceedings{howard2014natural,
+  title =        {A natural language planner interface for mobile
+                  manipulators},
+  author =       {Howard, Thomas M and Tellex, Stefanie and Roy,
+                  Nicholas},
+  booktitle =    {2014 IEEE International Conference on Robotics and
+                  Automation (ICRA)},
+  pages =        {6652--6659},
+  year =         2014,
+  organization = {IEEE}
+}
+
+@article{paul2018efficient,
+  title =        {Efficient grounding of abstract spatial concepts for
+                  natural language interaction with robot platforms},
+  author =       {Paul, Rohan and Arkin, Jacob and Aksaray, Derya and
+                  Roy, Nicholas and Howard, Thomas M},
+  journal =      {The International Journal of Robotics Research},
+  volume =       37,
+  number =       10,
+  pages =        {1269--1299},
+  year =         2018,
+  publisher =    {SAGE Publications Sage UK: London, England}
+}
+
+@inproceedings{patki2019inferring,
+  title =        {Inferring compact representations for efficient
+                  natural language understanding of robot
+                  instructions},
+  author =       {Patki, Siddharth and Daniele, Andrea F and Walter,
+                  Matthew R and Howard, Thomas M},
+  booktitle =    {2019 International Conference on Robotics and
+                  Automation (ICRA)},
+  pages =        {6926--6933},
+  year =         2019,
+  organization = {IEEE}
+}
