--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96129,3 +96129,23 @@
   year =         2019,
   organization = {IEEE}
 }
+
+@inproceedings{chu2016learning,
+  title =        {Learning object affordances by leveraging the
+                  combination of human-guidance and self-exploration},
+  author =       {Chu, Vivian and Fitzgerald, Tesca and Thomaz, Andrea
+                  L},
+  booktitle =    {2016 11th ACM/IEEE International Conference on
+                  Human-Robot Interaction (HRI)},
+  pages =        {221--228},
+  year =         {2016},
+  organization = {IEEE}
+}
+
+@InProceedings{fitzgerald2016cacs,
+  author =       {Fitzgerald T and Bullard K and Thomaz A and Goel A},
+  title =        {Situated mapping for transfer learning},
+  booktitle =    {Fourth annual conference on advances in cognitive
+                  systems},
+  year =         2016
+}
