--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96149,3 +96149,23 @@
                   systems},
   year =         2016
 }
+
+@TechReport{ISO10218,
+  author =       {{ISO/TC299 Robotics}},
+  title =        {{ISO} 10218-1:2011 Robots and robotic devices —
+                  Safety requirements for industrial robots},
+  institution =  {International Standardization Organization},
+  year =         2011,
+  month =        {July}
+}
+
+
+@TechReport{ISO15066,
+  author =       {{ISO/TC299 Robotics}},
+  title =        {{ISO/TS} 15066:2016 Robots and robotic devices —
+                  Collaborative robots},
+  institution =  {International Standardization Organization},
+  year =         2016,
+  month =        {Feb}
+}
+
