--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96169,3 +96169,13 @@
   month =        {Feb}
 }
 
+@misc{can2021topology,
+  title =        {Topology Preserving Local Road Network Estimation
+                  from Single Onboard Camera Image},
+  author =       {Yigit Baran Can and Alexander Liniger and Danda Pani
+                  Paudel and Luc Van Gool},
+  year =         {2021},
+  eprint =       {2112.10155},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
