--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96179,3 +96179,30 @@
   archivePrefix ={arXiv},
   primaryClass = {cs.CV}
 }
+
+@Article{campos21orbslam3,
+  author =       {C. Campos and R. Elvira and J. J. Gomes Rodriguez
+                  and J. M.M. Montiel and J. D. Tardos},
+  title =        {{ORB-SLAM3}: An Accurate Open-Source Library for
+                  Visual, Visual-Inertial and Multi-map {SLAM}},
+  journal =      {IEEE Trans. on Robotics},
+  year =         2021,
+  volume =       37,
+  number =       6,
+  pages =        {1874--1890},
+  month =        {Dec}
+}
+
+
+@Article{ortenzi21objecthandover,
+  author =       {V. Ortenzi and A. Cosgun and T. Pardi and W. P. Chan
+                  and E. Croft and D. Kulic},
+  title =        {Object handovers: A Review for Robotics},
+  journal =      {IEEE Trans. on Robotics},
+  year =         2021,
+  volume =       37,
+  number =       6,
+  pages =        {1855--1873},
+  month =        {Dec}
+}
+
