--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96206,3 +96206,10 @@
   month =        {Dec}
 }
 
+@article{murORB2,
+  title =        {{ORB-SLAM2}: an Open-Source {SLAM} System for
+                  Monocular, Stereo and {RGB-D} Cameras},
+  author =       {Mur-Artal, Ra\'ul and Tard\'os, Juan D.},
+  journal =      {arXiv preprint arXiv:1610.06475},
+  year =         {2016}
+}
