--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96213,3 +96213,24 @@
   journal =      {arXiv preprint arXiv:1610.06475},
   year =         {2016}
 }
+
+@MISC{eigenweb,
+  author =       {Ga\"{e}l Guennebaud and Beno\^{i}t Jacob and others},
+  title =        {Eigen v3},
+  howpublished = {http://eigen.tuxfamily.org},
+  year =         2010
+}
+
+@ARTICLE{GalvezTRO12,
+  author =       {G\'alvez-L\'opez, Dorian and Tard\'os, J. D.},
+  journal =      {IEEE Transactions on Robotics},
+  title =        {Bags of Binary Words for Fast Place Recognition in
+                  Image Sequences},
+  year =         2012,
+  month =        {October},
+  volume =       28,
+  number =       5,
+  pages =        {1188--1197},
+  doi =          {10.1109/TRO.2012.2197158},
+  ISSN =         {1552-3098}
+}
