--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96221,7 +96221,7 @@
   year =         2010
 }
 
-@ARTICLE{GalvezTRO12,
+@article{GalvezTRO12,
   author =       {G\'alvez-L\'opez, Dorian and Tard\'os, J. D.},
   journal =      {IEEE Transactions on Robotics},
   title =        {Bags of Binary Words for Fast Place Recognition in
@@ -96233,4 +96233,32 @@
   pages =        {1188--1197},
   doi =          {10.1109/TRO.2012.2197158},
   ISSN =         {1552-3098}
+}
+
+@ARTICLE{9000914,
+  author =       {Li, Zhengqi and Dekel, Tali and Cole, Forrester and
+                  Tucker, Richard and Snavely, Noah and Liu, Ce and
+                  Freeman, William T.},
+  journal =      {IEEE Transactions on Pattern Analysis and Machine
+                  Intelligence},
+  title =        {MannequinChallenge: Learning the Depths of Moving
+                  People by Watching Frozen People},
+  year =         2021,
+  volume =       43,
+  number =       12,
+  pages =        {4229-4241},
+  doi =          {10.1109/TPAMI.2020.2974454}
+}
+
+@ARTICLE{9170767,
+  author =       {Wang, Tong and Huang, Panfeng and Dong, Gangqi},
+  journal =      {IEEE Transactions on Automation Science and
+                  Engineering},
+  title =        {Modeling and Path Planning for Persistent
+                  Surveillance by Unmanned Ground Vehicle},
+  year =         2021,
+  volume =       18,
+  number =       4,
+  pages =        {1615-1625},
+  doi =          {10.1109/TASE.2020.3013288}
 }
