--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96250,7 +96250,7 @@
   doi =          {10.1109/TPAMI.2020.2974454}
 }
 
-@ARTICLE{9170767,
+@ARTICLE{Patrolling21,
   author =       {Wang, Tong and Huang, Panfeng and Dong, Gangqi},
   journal =      {IEEE Transactions on Automation Science and
                   Engineering},
@@ -96262,3 +96262,20 @@
   pages =        {1615-1625},
   doi =          {10.1109/TASE.2020.3013288}
 }
+
+@ARTICLE{EventBasedVision21,
+  author =       {Gallego, Guillermo and Delbr{\"u}ck, Tobi and Orchard,
+                  Garrick and Bartolozzi, Chiara and Taba, Brian and
+                  Censi, Andrea and Leutenegger, Stefan and Davison,
+                  Andrew J. and Conradt, Jörg and Daniilidis, Kostas
+                  and Scaramuzza, Davide},
+  journal =      {IEEE Transactions on Pattern Analysis and Machine
+                  Intelligence},
+  title =        {Event-Based Vision: A Survey},
+  year =         2022,
+  volume =       44,
+  number =       1,
+  pages =        {154-180},
+  doi =          {10.1109/TPAMI.2020.3008413}
+}
+
