Early January update

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96279,3 +96279,20 @@
   doi =          {10.1109/TPAMI.2020.3008413}
 }
 
+@article{Pandiri2018261,
+  title =        {A hyper-heuristic based artificial bee colony
+                  algorithm for k-Interconnected multi-depot
+                  multi-traveling salesman problem},
+  journal =      {Information Sciences},
+  volume =       {463-464},
+  pages =        {261-281},
+  year =         2018,
+  issn =         {0020-0255},
+  doi =          {https://doi.org/10.1016/j.ins.2018.06.027},
+  url =          {https://www.sciencedirect.com/science/article/pii/S0020025518304675},
+  author =       {Venkatesh Pandiri and Alok Singh},
+  keywords =     {-Interconnected multi-depot multi-traveling salesman
+                  problem, Multiple traveling salesman problem,
+                  Artificial bee colony algorithm, Hyper-heuristics},
+}
+
