End of January Check-in

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96296,3 +96296,44 @@
                   Artificial bee colony algorithm, Hyper-heuristics},
 }
 
+@article{Ishiguro2001RobovieAI,
+  title =        {Robovie: an interactive humanoid robot},
+  author =       {Hiroshi Ishiguro and Tetsuo Ono and Michita Imai and
+                  Takeshi Maeda and Takayuki Kanda and Ryohei Nakatsu},
+  journal =      {Industrial Robot-an International Journal},
+  year =         {2001},
+  volume =       {28},
+  pages =        {498-503}
+}
+
+@inproceedings{kirby2009companion,
+  title =        {Companion: A constraint-optimizing method for
+                  person-acceptable navigation},
+  author =       {Kirby, Rachel and Simmons, Reid and Forlizzi, Jodi},
+  booktitle =    {{RO-MAN 2009}-The 18th IEEE International Symposium on
+                  Robot and Human Interactive Communication},
+  pages =        {607--612},
+  year =         2009,
+  organization = {IEEE}
+}
+
+@book{kirby2010social,
+  title =        {Social robot navigation},
+  author =       {Kirby, Rachel},
+  year =         2010,
+  publisher =    {Carnegie Mellon University}
+}
+
+@article{galvao21,
+  author =       {L. G. Galvao and M. Abbod and T. Kalganova and
+                  F. Palade and N. Huda},
+  title =        {Pedestrian and Vehicle Detection in {A}utonomous
+                  {V}ehicle {P}erception {S}ystems -- {A Review}},
+  journal =      {Sensors},
+  year =         2021,
+  volume =       21,
+  number =       21,
+  pages =        {7267--7317},
+  month =        {Oct},
+  doi =          {https://doi.org/10.3390/s21217267}
+}
