January Books and magazines

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -20213,7 +20213,7 @@
   pages =        {9136--9140}
 }
 
-@book{Engelberger,
+@book{Engelberger89,
   title =        {{Robotics in Service}},
   author =       {J. F. Engelberger},
   year =         1989,
@@ -80191,6 +80191,7 @@
   pages =        {107--113}
 }
 
+
 @article{graf04:_care_o_ii,
   title =        {{Care-O-bot II -- Development of a next generation
                   robotic home assistant}},
@@ -96337,3 +96338,49 @@
   month =        {Oct},
   doi =          {https://doi.org/10.3390/s21217267}
 }
+
+@article{ctx24742055720006531,
+  title =        {Singularity Analysis of Closed Kinematic Chains},
+  author =       {Park, F C and Kim, J W},
+  address =      {New York, N.Y. :},
+  issn =         {1050-0472},
+  journal =      {Journal of Mechanical Design},
+  lccn =         {95657036},
+  number =       {1},
+  publisher =    {American Society of Mechanical Engineers,},
+  volume =       {121},
+  year =         {1999-03-01},
+}
+
+@Article{gosselin90:_singul_analy_closed_loop_kinem_chain,
+  author =       {C. Gosselin and J. Angeles},
+  title =        {Singularity Analysiss of Closed-Loop Kinematic
+                  Chains},
+  journal =      {IEEE Trans on Robotics and Automation},
+  year =         1990,
+  volume =       6,
+  number =       3,
+  pages =        {281--288},
+  month =        {June}
+}
+
+@misc{brunke2021safe,
+  title =        {Safe Learning in Robotics: From Learning-Based
+                  Control to Safe Reinforcement Learning},
+  author =       {Lukas Brunke and Melissa Greeff and Adam W. Hall and
+                  Zhaocong Yuan and Siqi Zhou and Jacopo Panerati and
+                  Angela P. Schoellig},
+  year =         {2021},
+  eprint =       {2108.06266},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.RO}
+}
+
+@Book{billard22:learn,
+  author =       {Aude Billard and Sina Mirrazavi and Nadia Figueroa},
+  title =        {Learning for adaptive and reactive robot control},
+  publisher =    {MIT Press},
+  year =         2022,
+  address =      {Cambridge, MA}
+}
+
