--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96384,3 +96384,33 @@
   address =      {Cambridge, MA}
 }
 
+@article{ROB-069,
+  author =       {Kostas Daniilidis and Leonidas Guibas and Lydia
+                  Kavraki and Petros Koumoutsakos and Kostas
+                  Kyriakopoulos and John Lygeros and George J. Pappas
+                  and Michael Triantafyllou and Panagiotis Tsiotras},
+  url =          {http://dx.doi.org/10.1561/2300000069},
+  year =         2021,
+  volume =       9,
+  journal =      {Foundations and Trends® in Robotics},
+  title =        {Robotics in the AI era: A vision for a Hellenic
+                  Robotics Initiative},
+  doi =          {10.1561/2300000069},
+  issn =         {1935-8253},
+  number =       3,
+  pages =        {201-265},
+}
+
+@Book{isrr19,
+  editor =       {Tamim Asfour and Eiichi Yoshida and Jaeheung Park
+                  and Henrik Christensen and Oussama Khatib},
+  title =        {Robotics Research - The 19th International Symposium
+                  ISRR},
+  publisher =    {Springer Verlag},
+  year =         2022,
+  volume =       20,
+  series =       {SPAR},
+  address =      {Berlin},
+  month =        {February}
+}
+
