ICRA papers and jan journals

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96414,3 +96414,41 @@
   month =        {February}
 }
 
+@InProceedings{paz22tridentv2,
+  author =       {David Paz and Hao Xiang and Andrew Liang and Henrik
+                  Iskov Christensen},
+  title =        {{TridentNetV2}: Lightweight Graphical Global Plan
+                  Representations for Dynamic Trajectory Generation },
+  booktitle =    {Intl Conf of Robotics and Automation {(ICRA)}},
+  year =         2022,
+  pages =        { },
+  month =        {May},
+  address =      {Philadelphia, PA},
+  organization = {IEEE}
+}
+
+@article{DBLP:journals/corr/abs-2107-01829,
+  author =       {Yoojin Oh and Marc Toussaint and Jim Mainprice},
+  title =        {A System for Traded Control Teleoperation of
+                  Manipulation Tasks using Intent Prediction from Hand
+                  Gestures},
+  journal =      {CoRR},
+  volume =       {abs/2107.01829},
+  year =         2021,
+  url =          {https://arxiv.org/abs/2107.01829},
+  eprinttype =   {arXiv},
+  eprint =       {2107.01829},
+  timestamp =    {Wed, 07 Jul 2021 15:23:11 +0200},
+  biburl =       {https://dblp.org/rec/journals/corr/abs-2107-01829.bib},
+  bibsource =    {dblp computer science bibliography,  https://dblp.org}
+}
+
+@Manual{fred,
+  title =        {E-Commerce Retail Sales},
+  organization ={{Federal Reserve of Economic Data (FRED)}},
+  address =   {St. Louis, },
+  month =     {Feb},
+  year =      2022,
+  url =          {https://fred.stlouisfed.org/series/ECOMSA}
+}
+
