End of March Update

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96452,3 +96452,48 @@
   url =          {https://fred.stlouisfed.org/series/ECOMSA}
 }
 
+@InProceedings{pmlr-v119-boehmer20a,
+  title =        {Deep Coordination Graphs},
+  author =       {Boehmer, Wendelin and Kurin, Vitaly and Whiteson,
+                  Shimon},
+  booktitle =    {Proceedings of the 37th International Conference on
+                  Machine Learning},
+  pages =        {980--991},
+  year =         2020,
+  editor =       {III, Hal Daumé and Singh, Aarti},
+  volume =       119,
+  series =       {Proceedings of Machine Learning Research},
+  month =        {13--18 Jul},
+  publisher =    {PMLR},
+  pdf =
+                  {http://proceedings.mlr.press/v119/boehmer20a/boehmer20a.pdf},
+  url =          {https://proceedings.mlr.press/v119/boehmer20a.html},
+  abstract =     {This paper introduces the deep coordination graph
+                  (DCG) for collaborative multi-agent reinforcement
+                  learning. DCG strikes a flexible trade-off between
+                  representational capacity and generalization by
+                  factoring the joint value function of all agents
+                  according to a coordination graph into payoffs
+                  between pairs of agents. The value can be maximized
+                  by local message passing along the graph, which
+                  allows training of the value function end-to-end
+                  with Q-learning. Payoff functions are approximated
+                  with deep neural networks that employ parameter
+                  sharing and low-rank approximations to significantly
+                  improve sample efficiency. We show that DCG can
+                  solve predator-prey tasks that highlight the
+                  relative overgeneralization pathology, as well as
+                  challenging StarCraft II micromanagement tasks.}
+}
+
+@article{Pomerleau12comp,
+  author =       {Pomerleau, Fran{\c c}ois and Colas, Francis and
+                  Siegwart, Roland and Magnenat, St{\'e}phane},
+  title =        {{Comparing ICP Variants on Real-World Data Sets}},
+  journal =      {Autonomous Robots},
+  year =         {2013},
+  volume =       {34},
+  number =       {3},
+  pages =        {133--148},
+  month =        feb
+}
