End of April Check-in (regular maintenance)

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96497,3 +96497,35 @@
   pages =        {133--148},
   month =        feb
 }
+
+@misc{https://doi.org/10.48550/arxiv.2204.02392,
+  doi =          {10.48550/ARXIV.2204.02392},
+  url =          {https://arxiv.org/abs/2204.02392},
+  author =       {Vazquez, Jose L. and Liniger, Alexander and
+                  Schwarting, Wilko and Rus, Daniela and Van Gool,
+                  Luc},
+  keywords =     {Robotics (cs.RO), Artificial Intelligence (cs.AI),
+                  Multiagent Systems (cs.MA), FOS: Computer and
+                  information sciences, FOS: Computer and information
+                  sciences},
+  title =        {Deep Interactive Motion Prediction and Planning:
+                  Playing Games with Motion Prediction Models},
+  publisher =    {arXiv},
+  year =         2022,
+  copyright =    {arXiv.org perpetual, non-exclusive license}
+}
+
+
+@inproceedings{Zhu2022CVPR,
+  author =       {Zhu, Zihan and Peng, Songyou and Larsson, Viktor and
+                  Xu, Weiwei and Bao, Hujun and Cui, Zhaopeng and
+                  Oswald, Martin R. and Pollefeys, Marc},
+  title =        {NICE-SLAM: Neural Implicit Scalable Encoding for
+                  SLAM},
+  booktitle =    {Proceedings of the IEEE/CVF Conference on Computer
+                  Vision and Pattern Recognition (CVPR)},
+  month =        {June},
+  year =         2022,
+  pdf =          {https://arxiv.org/pdf/2112.12130.pdf}
+}
+
