AVL updates and validation issues

--- a/bib-file.bib
+++ b/bib-file.bib
@@ -96529,3 +96529,29 @@
   pdf =          {https://arxiv.org/pdf/2112.12130.pdf}
 }
 
+@misc{language-affordance,
+  doi             = {10.48550/ARXIV.2204.01691},
+  url             = {https://arxiv.org/abs/2204.01691},
+  author          = {Ahn, Michael and Brohan, Anthony and Brown, Noah and
+                  Chebotar, Yevgen and Cortes, Omar and David, Byron and Finn,
+                  Chelsea and Gopalakrishnan, Keerthana and Hausman, Karol and
+                  Herzog, Alex and Ho, Daniel and Hsu, Jasmine and Ibarz, Julian
+                  and Ichter, Brian and Irpan, Alex and Jang, Eric and Ruano,
+                  Rosario Jauregui and Jeffrey, Kyle and Jesmonth, Sally and
+                  Joshi, Nikhil J and Julian, Ryan and Kalashnikov, Dmitry and
+                  Kuang, Yuheng and Lee, Kuang-Huei and Levine, Sergey and Lu,
+                  Yao and Luu, Linda and Parada, Carolina and Pastor, Peter and
+                  Quiambao, Jornell and Rao, Kanishka and Rettinghouse, Jarek
+                  and Reyes, Diego and Sermanet, Pierre and Sievers, Nicolas and
+                  Tan, Clayton and Toshev, Alexander and Vanhoucke, Vincent and
+                  Xia, Fei and Xiao, Ted and Xu, Peng and Xu, Sichun and Yan,
+                  Mengyuan},
+  keywords        = {Robotics (cs.RO), Computation and Language (cs.CL), Machine
+                  Learning (cs.LG), FOS: Computer and information sciences, FOS:
+                  Computer and information sciences},
+  title           = {Do As I Can, Not As I Say: Grounding Language in Robotic
+                  Affordances},
+  publisher       = {arXiv},
+  year            = 2022,
+  copyright       = {arXiv.org perpetual, non-exclusive license}
+}
